Record async events only after ERR_IO_PENDING in BlobReader

According to the comment on DiskCache::ReadData[1], it's not guaranteed
that the completion callback is called when the read request immediately
succeeds. We should use TRACE_EVENT_ASYNC_BEGIN1() macro only after
ERR_IO_PENDING because otherwise async events never finish.

[1] https://cs.chromium.org/chromium/src/net/disk_cache/disk_cache.h?l=301&rcl=93f9ef9762b0c9158dd8acb0ceb52dbd14a308a3

Change-Id: Ie70730b8dfffd0777a68eabd9970216054cdc7ab
Bug: 896604
Reviewed-on: https://chromium-review.googlesource.com/c/1288336
Commit-Queue: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600718}